apps/base/chefbot-sim/postgresql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgresql
  namespace: chefbot-sim
spec:
  selector:
    app: postgresql
  ports:
    - port: 5432
      targetPort: 5432
