apps/base/chefbot-sim/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chefbot-sim
  namespace: chefbot-sim
  labels:
    app: chefbot-sim
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: chefbot-sim
